# BSW

./: .clang-format  .gitmodules  CMakeLists.txt  CNAME  README.md
dependencies/freetype-2.10.4/src/gzip/: zutil.h
dependencies/freetype-2.10.4/src/tools/: cordic.py
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
engine/: bsw.h  engine.cpp  engine.h
engine/core/assets/: asset_manager.cpp  asset_manager.h  resource_manager.cpp  resource_manager.h
engine/core/event/: event.h  event_handler.cpp  event_handler.h  events.h  key_events.h  mouse_events.h  screen_events.h  window_events.h
engine/core/font/: font.cpp  font.h  font_manager.cpp  font_manager.h
engine/core/imgui/: imgui_handler.cpp  imgui_handler.h
engine/core/input/: input.cpp  input.h  key_codes.h  mouse_codes.h
engine/core/render/: camera.h  geometry.cpp  geometry.h  geometry_renderer.cpp  geometry_renderer.h  gl_render.cpp  gl_render.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h
engine/core/render/2d/: renderer2d.cpp  renderer2d.h
engine/core/render/animation/: animation_handler.cpp  animation_handler.h
engine/core/render/buffer/: buffer_layout.h  index_buffer.cpp  index_buffer.h  shader_storage_buffer.cpp  shader_storage_buffer.h  vertex_buffer.cpp  vertex_buffer.h
engine/core/render/font/: font.cpp  font.h
engine/core/render/shading/: shader.cpp  shader.h
engine/core/render/texture/: animation_handler.cpp  animation_handler.h  texture2d.cpp  texture2d.h  texture_atlas.cpp  texture_atlas.h
engine/core/screen/: screen.cpp  screen.h  screen_handler.cpp  screen_handler.h  screen_stack.cpp  screen_stack.h
engine/core/texture/: animation.cpp  animation.h  texture2d.cpp  texture2d.h  texture_generator.cpp  texture_generator.h
engine/core/window/: window.cpp  window.h
engine/math/: color.cpp  color.h  mathf.cpp  mathf.h
engine/utils/: assertion.h  file.cpp  file.h  imgui_utils.cpp  imgui_utils.h  logging.h  macros.h  mathf.h  timing.h
engine/utils/math/: easing.h
league of oben/screens/: game_screen.h
math/math/: color.cpp  color.h
resources/: BasicNamingConvention.md
resources/animations/: animation.anim  animation.png.atlas
resources/shader/: basic.frag  basic_fragment.glsl  basic_vertex.glsl  vertex_geometry_shader.glsl
sandbox/: main.cpp
sandbox/screens/: mainmenu_screen.cpp  mainmenu_screen.h  settings_screen.cpp  settings_screen.h  test2d.cpp  test2d.h
sandbox/snake/: snake.cpp  snake.h  snake_screen.cpp  snake_screen.h
shader/: fragment_shader.glsl
uilib/: ui_button.cpp  ui_button.h
utils/utils/: file.cpp  file.h
